@@ -3,30 +3,34 @@ package io.antmedia.webrtc.adaptor;
 import static org.bytedeco.javacpp.avutil.AV_PIX_FMT_YUV420P;
 
 import java.nio.ByteBuffer;
-import java.nio.ByteOrder;
 import java.nio.ShortBuffer;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.webrtc.AudioSink;
-import org.webrtc.AudioTrack;
 import org.webrtc.IceCandidate;
 import org.webrtc.MediaConstraints;
 import org.webrtc.MediaStream;
 import org.webrtc.PeerConnection;
 import org.webrtc.PeerConnection.IceServer;
+import org.webrtc.audio.JavaAudioDeviceModule;
+import org.webrtc.audio.WebRtcAudioTrack;
 import org.webrtc.PeerConnectionFactory;
 import org.webrtc.SessionDescription;
-import org.webrtc.VideoRenderer;
-import org.webrtc.VideoRenderer.Callbacks;
-import org.webrtc.VideoRenderer.I420Frame;
+import org.webrtc.SoftwareVideoDecoderFactory;
+import org.webrtc.SoftwareVideoEncoderFactory;
+import org.webrtc.VideoFrame;
+import org.webrtc.VideoFrame.Buffer;
+import org.webrtc.VideoSink;
 import org.webrtc.VideoTrack;
+import org.webrtc.WrappedNativeI420Buffer;
 
 import io.antmedia.recorder.FFmpegFrameRecorder;
 import io.antmedia.recorder.Frame;
@@ -34,6 +38,12 @@ import io.antmedia.recorder.FrameRecorder;
 import io.antmedia.websocket.WebSocketCommunityHandler;
 
 public class RTMPAdaptor extends Adaptor {
+
+
+	public static final String AUDIO_ECHO_CANCELLATION_CONSTRAINT = "googEchoCancellation";
+	public static final String AUDIO_AUTO_GAIN_CONTROL_CONSTRAINT = "googAutoGainControl";
+	public static final String AUDIO_HIGH_PASS_FILTER_CONSTRAINT = "googHighpassFilter";
+	public static final String AUDIO_NOISE_SUPPRESSION_CONSTRAINT = "googNoiseSuppression";
 
 	FFmpegFrameRecorder recorder;
 	protected long startTime;
@@ -44,13 +54,17 @@ public class RTMPAdaptor extends Adaptor {
 
 	private ExecutorService audioEncoderExecutor;
 	private volatile boolean isStopped = false;
-	private ExecutorService signallingExecutor;
+	private ScheduledExecutorService signallingExecutor;
 	private boolean enableAudio = false;
 
-	private int audioFrameCount = 0;
+	private volatile int audioFrameCount = 0;
 	private boolean started = false;
+	private ScheduledFuture<?> audioDataSchedulerFuture;
+	private WebRtcAudioTrack webRtcAudioTrack;
 
 	public static final String DTLS_SRTP_KEY_AGREEMENT_CONSTRAINT = "DtlsSrtpKeyAgreement";
+
+	private static String stunServerUri ="stun:stun.l.google.com:19302";
 
 	public RTMPAdaptor(FFmpegFrameRecorder recorder, WebSocketCommunityHandler webSocketHandler) {
 		super(webSocketHandler);
@@ -64,30 +78,60 @@ public class RTMPAdaptor extends Adaptor {
 	}
 
 	public PeerConnectionFactory createPeerConnectionFactory(){
-		PeerConnectionFactory.Options options = new PeerConnectionFactory.Options();
-		options.networkIgnoreMask = 0;
-		return new PeerConnectionFactory(options);
+		PeerConnectionFactory.initialize(
+				PeerConnectionFactory.InitializationOptions.builder(null)
+				.createInitializationOptions());
 
+
+		SoftwareVideoEncoderFactory encoderFactory = new SoftwareVideoEncoderFactory();
+		SoftwareVideoDecoderFactory decoderFactory = new SoftwareVideoDecoderFactory();
+
+		PeerConnectionFactory.Options options = new PeerConnectionFactory.Options();
+		options.disableNetworkMonitor = true;
+
+
+		// in receiving stream only Audio Track should be enabled
+		// in sending stream only AudioRecord should be enabled 
+		JavaAudioDeviceModule adm = (JavaAudioDeviceModule)
+				JavaAudioDeviceModule.builder(null)
+				.setUseHardwareAcousticEchoCanceler(false)
+				.setUseHardwareNoiseSuppressor(false)
+				.setAudioRecordErrorCallback(null)
+				.setAudioTrackErrorCallback(null)
+				.createAudioDeviceModule();
+
+		webRtcAudioTrack = adm.getAudioTrack();
+		return  PeerConnectionFactory.builder()
+				.setOptions(options)
+				.setAudioDeviceModule(adm)
+				.setVideoEncoderFactory(encoderFactory)
+				.setVideoDecoderFactory(decoderFactory)
+				.createPeerConnectionFactory();
 	}
 
 	@Override
 	public void start() {
 		videoEncoderExecutor = Executors.newSingleThreadExecutor();
 		audioEncoderExecutor = Executors.newSingleThreadExecutor();
-		signallingExecutor = Executors.newSingleThreadExecutor();
+		signallingExecutor = Executors.newSingleThreadScheduledExecutor();
 
 		signallingExecutor.execute(() -> {
 
-			List<IceServer> iceServers = new ArrayList<>();
-			iceServers.add(new IceServer("stun:stun.l.google.com:19302"));
-			PeerConnection.RTCConfiguration rtcConfig = new PeerConnection.RTCConfiguration(iceServers);
-
-			MediaConstraints pcConstraints = new MediaConstraints();
-			pcConstraints.optional.add(
-					new MediaConstraints.KeyValuePair(DTLS_SRTP_KEY_AGREEMENT_CONSTRAINT, "true"));
-
 			peerConnectionFactory = createPeerConnectionFactory();
-			peerConnection = peerConnectionFactory.createPeerConnection(rtcConfig, pcConstraints, RTMPAdaptor.this);
+
+			List<IceServer> iceServers = new ArrayList();
+			iceServers.add(IceServer.builder(stunServerUri).createIceServer());
+			
+
+			PeerConnection.RTCConfiguration rtcConfig =
+					new PeerConnection.RTCConfiguration(iceServers);
+
+
+			// Enable DTLS for normal calls and disable for loopback calls.
+			rtcConfig.enableDtlsSrtp = true;
+
+
+			peerConnection = peerConnectionFactory.createPeerConnection(rtcConfig, RTMPAdaptor.this);
 
 			webSocketCommunityHandler.sendStartMessage(getStreamId(), getSession());
 
@@ -104,6 +148,10 @@ public class RTMPAdaptor extends Adaptor {
 			return;
 		}
 		isStopped  = true;
+
+		if (audioDataSchedulerFuture != null) {
+			audioDataSchedulerFuture.cancel(false);
+		}
 
 		signallingExecutor.execute(() -> {
 
@@ -134,7 +182,7 @@ public class RTMPAdaptor extends Adaptor {
 		});
 		signallingExecutor.shutdown();
 	}
-	
+
 	public ExecutorService getSignallingExecutor() {
 		return signallingExecutor;
 	}
@@ -145,99 +193,100 @@ public class RTMPAdaptor extends Adaptor {
 	public void onAddStream(MediaStream stream) {
 		log.warn("onAddStream for stream: {}", getStreamId());
 
-		if (!stream.getAudioTracks().isEmpty()) {
+		if (!stream.audioTracks.isEmpty()) {
+			enableAudio = true;
+			audioDataSchedulerFuture = signallingExecutor.scheduleAtFixedRate(() -> {
 
-			AudioTrack audioTrack = stream.getAudioTracks().getFirst();
-			if (audioTrack != null) {
-
-				enableAudio  = true;
-				audioTrack.addSink(new AudioSink() {
-
-
-					@Override
-					public void onData(byte[] audio_data, int bits_per_sample, final int sample_rate, final int number_of_channels,
-							final int number_of_frames) {
-						final ByteBuffer tempAudioBuffer = ByteBuffer.wrap(audio_data);
-
-						if (startTime == 0) {
-							startTime = System.currentTimeMillis();
-						}
-
-						if (audioEncoderExecutor == null || audioEncoderExecutor.isShutdown()) {
-							return;
-						}
-
-
-						if (bits_per_sample == 16)  {
-							audioFrameCount++;
-
-							audioEncoderExecutor.execute(() -> {
-
-								short[] data = new short[number_of_frames * number_of_channels];
-								tempAudioBuffer.order(ByteOrder.LITTLE_ENDIAN).asShortBuffer().get(data, 0, data.length);
-
-								ShortBuffer audioBuffer = ShortBuffer.wrap(data);
-								try {
-									boolean result = recorder.recordSamples(sample_rate, number_of_channels, audioBuffer);
-									if (!result) {
-										logger.info("could not audio sample for stream Id {}", getStreamId());
-									}
-								} catch (FrameRecorder.Exception e) {
-									logger.error(ExceptionUtils.getStackTrace(e));
-								}
-
-
-							});
-						}
-
+					if (startTime == 0) {
+						startTime = System.currentTimeMillis();
 					}
-				});
-			}
+
+					if (audioEncoderExecutor == null || audioEncoderExecutor.isShutdown()) {
+						return;
+					}
+
+					audioFrameCount++;
+					ByteBuffer playoutData = webRtcAudioTrack.getPlayoutData();
+
+					audioEncoderExecutor.execute(() -> {
+
+						ShortBuffer audioBuffer = playoutData.asShortBuffer();
+						try {
+							boolean result = recorder.recordSamples(webRtcAudioTrack.getSampleRate(), webRtcAudioTrack.getChannels(), audioBuffer);
+							if (!result) {
+								logger.info("could not audio sample for stream Id {}", getStreamId());
+							}
+						} catch (FrameRecorder.Exception e) {
+							logger.error(ExceptionUtils.getStackTrace(e));
+						}
+					});
+				
+			}, 0, 10, TimeUnit.MILLISECONDS);
 		}
 
-		if (!stream.getVideoTracks().isEmpty()) {
 
-			VideoTrack videoTrack = stream.getVideoTracks().getFirst();
+
+		if (!stream.videoTracks.isEmpty()) {
+
+			VideoTrack videoTrack = stream.videoTracks.get(0);
 			if (videoTrack != null) {
-				videoTrack.addRenderer(new VideoRenderer(new Callbacks() {
+
+				videoTrack.addSink(new VideoSink() {
 
 					private int frameCount;
 					private int dropFrameCount = 0;
+					private long pts;
+					private int frameNumber;
+					private int videoFrameLogCounter = 0;
+					private int lastFrameNumber = -1;
 
 					@Override
-					public void renderFrame(final I420Frame frame) {
+					public void onFrame(VideoFrame frame) {
 						if (startTime == 0) {
 							startTime = System.currentTimeMillis();
 						}
 
 						if (videoEncoderExecutor == null || videoEncoderExecutor.isShutdown()) {
-							VideoRenderer.renderFrameDone(frame);
 							return;
 						}
 
+						frame.retain();
 						frameCount++;
-						videoEncoderExecutor.execute(() -> {
+						videoFrameLogCounter++;
 
-							long pts;
+						if (videoFrameLogCounter % 100 == 0) {
+							logger.info("Received total video frames: {}  received fps: {}" , 
+									frameCount, frameCount/((System.currentTimeMillis() - startTime)/1000));
+							videoFrameLogCounter = 0;
+
+						}
+
+						videoEncoderExecutor.execute(() -> {
 							if (enableAudio) {
-								//each audio frame is 10 ms and then multiply with 1000 for microseconds
+								//each audio frame is 10 ms 
 								pts = (long)audioFrameCount * 10;
 								logger.trace("audio frame count: {}", audioFrameCount);
 							}
 							else {
-								pts = (System.currentTimeMillis() - startTime) * 1000;
+								pts = (System.currentTimeMillis() - startTime);
 							}
 
-							int frameNumber = (int)(pts * recorder.getFrameRate() / 1000);
-							if (frameNumber > recorder.getFrameNumber()) {
+							frameNumber = (int)(pts * recorder.getFrameRate() / 1000f);
+
+							if (frameNumber > lastFrameNumber) {
 
 								recorder.setFrameNumber(frameNumber);
+								lastFrameNumber = frameNumber;
 
-								Frame frameCV = new Frame(frame.width, frame.height, Frame.DEPTH_UBYTE, 2);
+								Frame frameCV = new Frame(frame.getRotatedWidth(), frame.getRotatedHeight(), Frame.DEPTH_UBYTE, 2);
 
-								((ByteBuffer)(frameCV.image[0].position(0))).put(frame.yuvPlanes[0]);
-								((ByteBuffer)(frameCV.image[0])).put(frame.yuvPlanes[1]);
-								((ByteBuffer)(frameCV.image[0])).put(frame.yuvPlanes[2]);
+								Buffer buffer = frame.getBuffer();
+								if (buffer instanceof WrappedNativeI420Buffer) {
+									WrappedNativeI420Buffer wrappedBuffer = (WrappedNativeI420Buffer) buffer;
+									((ByteBuffer)(frameCV.image[0].position(0))).put(wrappedBuffer.getDataY());
+									((ByteBuffer)(frameCV.image[0])).put(wrappedBuffer.getDataU());
+									((ByteBuffer)(frameCV.image[0])).put(wrappedBuffer.getDataV());
+								}
 
 								try {
 									recorder.recordImage(frameCV.imageWidth, frameCV.imageHeight, frameCV.imageDepth,
@@ -249,13 +298,14 @@ public class RTMPAdaptor extends Adaptor {
 							}
 							else {
 								dropFrameCount ++;
-								logger.debug("dropping video, total drop count: {}", dropFrameCount);
+								logger.info("dropping video, total drop count: {} frame number: {} recorder frame number: {}", 
+										dropFrameCount, frameNumber, lastFrameNumber);
 							}
-							VideoRenderer.renderFrameDone(frame);
-
+							frame.release();
 						});
+
 					}
-				}));
+				});
 			}
 		}
 
